src/components/modal/content/US/styles/content.scss
.content {
    position: relative;
    background: transparent;
    box-sizing: border-box;
    padding-top: 20rem;

    .corner {
        position: absolute;
        top: -2rem;
        left: 0;
        width: 100px;
        height: 2rem;
        overflow: hidden;
        background-color: white;
        z-index: 51;
        top: 18rem;
        max-width: 640px;

        &:after {
            content: '';
            position: absolute;
            background-color: $header-background;
            border-bottom-left-radius: 100px 30px;
            bottom: 0;
            left: 0;
            width: 100%;
            height: 100%;
        }
    }

    .content-body {
        padding: 0 1rem 1rem;
        margin: auto;
        max-width: 500px;
    }

    h2 {
        text-align: left;
        font-weight: bold;
        font-size: 19px;
    }

    .divider {
        border: none;
        border-bottom: 1px dashed #aaa;
    }

    p,
    li {
        color: #687173;
    }

    .call-to-action {
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: space-between;
        margin-top: 3rem;

        svg {
            margin: 0;
        }

        p {
            margin-top: 0;
            margin-bottom: 0.2rem;
        }

        button {
            margin-left: 1rem;
            flex: 0 1 35%;
        }

        .dark-text {
            color: #2c2e2f;
        }
    }

    .d-inline-block {
        display: inline-block;
    }

    main {
        background: white;
        padding-top: 0;
    }

    .apply-now {
        background: #ffc43a;
        color: #2c2e2f;
        border: none;
    }

    .sticky-apply-now {
        position: fixed;
        width: 100%;
        max-width: 640px;
        top: calc(10rem + 84px);
        z-index: 52;
        text-align: center;
        padding-top: 1rem;
        background: white;
        pointer-events: none;
        opacity: 0;
        transform: translateY(0);
        transition: all 0.3s;

        &:after {
            content: '';
            position: absolute;
            top: 100%;
            left: 0;
            width: 100%;
            height: 1rem;
            background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
        }

        button {
            margin-bottom: 0.5rem;
            transition: all 0.3s;
            transform-origin: right center;
            transform: scaleX(0.5) translateX(25px);
        }

        div {
            color: #687173;
            font-size: 13px;
            transition: all 0.3s;
            transform: translateX(-25px);
        }

        hr {
            max-width: 400px;
        }

        &.show {
            opacity: 1;
            transform: translateY(0);

            button {
                transform: scaleX(1) translateX(0);
                pointer-events: all;
            }

            div {
                transform: translateX(0);
            }
        }
    }

    .terms {
        li {
            margin-bottom: 0.5rem;
        }
    }

    .tab-switch-button {
        border: none;
        outline: none;
        background: none;
        text-decoration: none;
        padding: 0;
        color: #0070ba;
        font-weight: 600;
        position: relative;
        margin-bottom: 1rem;
        cursor: pointer;

        &:after {
            content: '';
            position: absolute;
            left: calc(100% + 0.25rem);
            border-top: 2px solid #0070ba;
            border-right: 2px solid #0070ba;
            transform: rotate(45deg);
            width: 0.5rem;
            height: 0.5rem;
            top: 0.1rem;
        }
    }

    @include desktop {
        padding-top: 12rem;

        .corner {
            top: 10rem;
            position: fixed;
            left: auto;
            width: 100%;
        }

        .tabs {
            position: fixed;
            top: 12rem;
            max-width: 640px;
        }

        .sticky-apply-now {
            top: 12rem;
        }
    }

    @include mobile {
        &.sticky {
            .corner {
                width: 100%;
                position: fixed;
                top: calc(8rem + 84px);
                left: auto;
            }

            .tabs {
                position: fixed;
                top: calc(10rem + 84px);
                max-width: 640px;
            }
        }

        .content-body {
            max-width: 400px;
        }

        .hidden-xs {
            display: none;
        }
    }
}

